--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,20 @@
-== README
+# Rails/Tubesock WebSocket Test
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+A tiny demo using the [TubeSock](https://github.com/ngauthier/tubesock) WebSocket implementation.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+# Running
+
+``` bash
+bundle install
+rails s
+```
+
+# Running on Heroku
+
+``` bash
+heroku create
+heroku labs:enable websockets
+git push heroku master
+heroku open
+```
